[package]
description = "Makima's here to abuse you when running cargo~"
repository = "https://github.com/ivabus/cargo-makima"
license = "MIT"
name = "cargo-makima"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5" }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"